--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "communitycaster",
-  "version": "1.0.0",
-  "description": "- Account Abstraction for creating an acocunt for the app - User can join a community -> They will pay a monthly fee - Monthy fee is pooled together and only accesaable by community vote - Person can post a porposal - all is done through farcaster frames and MACI infactstrucutre for avoiding colusion - SmartContract logic is hosted on Arbitrum Nova(think it's better than one for our usecase because it's cheaper)",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/krakra9/CommunityCaster.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/krakra9/CommunityCaster/issues"
-  },
-  "homepage": "https://github.com/krakra9/CommunityCaster#readme",
   "dependencies": {
-    "express": "^4.18.3"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11"
   }
 }
