--- a/FRONTEND_NODE/package.json
+++ b/FRONTEND_NODE/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@magic-ext/oauth": "^21.0.0",
+    "@magic-sdk/admin": "^2.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "magic-sdk": "^19.3.1",
+    "permissionless": "^0.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "typescript": "^5.4.2",
+    "viem": "^2.8.10",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
